[package]
name = "job-queue"
version = "0.1.0"
authors = ["Kyle McCarthy <kyle@creativeanvil.com>"]
edition = "2018"

[dependencies]
hashbrown = "0.1.8"
crossbeam = "0.7.1"
serde = { version = "1.0", features = ["derive"] }
uuid = { version = "0.7", features = ["serde", "v4"] }
failure = "0.1.5"
slog-async = "2.3.0"
slog-term = "2.4.0"
lazy_static = "1.3.0"
